Prepare for initial Heroku push

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --mode=development --watch",
-    "start": "webpack --mode=development --watch"
+    "start": "webpack --mode=development --watch",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,10 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/youngrokkim2017/scoop/issues"
+  },
+  "engines": {
+    "node": "12.5.0",
+    "npm": "6.9.0"
   },
   "homepage": "https://github.com/youngrokkim2017/scoop#readme"
 }
